--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/Index.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/src/_public/hamburger-svgrepo-com.svg">
     <title>Burguer Menew</title>
   </head>
   <body>
